--- a/Happy Face/package.json
+++ b/Happy Face/package.json
@@ -11,7 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/axios": "^0.14.0",
     "axios": "^1.7.7",
