--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,5 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+volumes:
+  postgres-data:
