--- a/Smile Base/src/main/resources/application.properties
+++ b/Smile Base/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# application and server config
 spring.application.name=Smile Base
+spring.config.import=optional:file:.env[.properties]
+server.port=${BE_PORT}
+
+# JWT config
+security.jwt.secret-key=${JWT_SECRET_KEY}
+security.jwt.expiration-time=3600000
+
+# Database config
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
