--- a/Smile Base/src/main/resources/application.properties
+++ b/Smile Base/src/main/resources/application.properties
@@ -11,3 +11,7 @@ security.jwt.expiration-time=3600000
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
+
+# Hibernate config
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
