disabled logging for normal test passes

--- a/Smile Base/src/test/resources/application.properties
+++ b/Smile Base/src/test/resources/application.properties
@@ -4,7 +4,10 @@ spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 
 security.jwt.secret-key=secret
 security.jwt.expiration-time=3600000
+
+logging.level.root=OFF
