--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,14 +4,37 @@ on:
   workflow_dispatch:
   pull_request:
     branches: [ develop ]
+    types: [opened, synchronize, reopened, labeled]
 
 permissions:
   contents: read
   pull-requests: write
 
 jobs:
+  check_label:
+    name: Check for Review Label
+    runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.check_label.outputs.has_label }}
+    steps:
+    - name: Check for 'PR - for review' label
+      id: check_label
+      uses: actions/github-script@v7.0.1
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          const labels = await github.rest.issues.listLabelsOnIssue({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number
+          });
+          const hasLabel = labels.data.some(label => label.name === 'PR - for review');
+          core.setOutput('has_label', hasLabel);
+
   determine_changes:
     name: Determine Changed Components
+    needs: check_label
+    if: needs.check_label.outputs.should_run == 'true'
     runs-on: ubuntu-latest
     outputs:
       frontend_changed: ${{ steps.filter.outputs.frontend }}
