updated application.properties to include new vars and security config to let api requests through for patient-schedule endpoint

--- a/Smile Base/src/main/resources/application.properties
+++ b/Smile Base/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 # Hibernate config
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# PS Config
+smilebase.PS_KEY=${PS_KEY}
+smilebase.PS_TOKEN=${PS_TOKEN}
