added test vars to application.properties for tests

--- a/Smile Base/src/test/resources/application.properties
+++ b/Smile Base/src/test/resources/application.properties
@@ -11,3 +11,6 @@ security.jwt.secret-key=978ea72a82e9dd86006793fe99183284f1ef0453194a74b161c0ce4f
 security.jwt.expiration-time=3600000
 
 logging.level.root=OFF
+
+smilebase.PS_KEY=testsecret
+smilebase.PS_TOKEN=supertoken
