refactored mailer to inject spring values and added the var into application.properties

--- a/Smile Base/src/main/resources/application.properties
+++ b/Smile Base/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.jpa.hibernate.ddl-auto=update
 # PS Config
 smilebase.PS_KEY=${PS_KEY}
 smilebase.PS_TOKEN=${PS_TOKEN}
+
+# Mail config
+resend.api.key=${RES_API_KEY}
