--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,8 +17,8 @@ jobs:
     outputs:
       is_ready: ${{ steps.check_labels.outputs.is_ready }}
     steps:
-    - name: Check for 'PR - for review' label
-      id: check_label
+    - name: Check for review labels
+      id: check_labels
       uses: actions/github-script@v7.0.1
       with:
         github-token: ${{secrets.GITHUB_TOKEN}}
@@ -52,7 +52,7 @@ jobs:
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                body: 'This PR is not ready for checks. Please add either the "PR - for review" or "PR - reviewed - ready" label when it\'s ready to run checks.'
+                body: 'This PR is not ready for checks. Please add the "PR - for review" label when it\'s ready to run checks.'
               });
             }
             
