--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -29,14 +29,14 @@ jobs:
             pull_number: context.issue.number
           });
 
-          const labels = await github.rest.issues.listLabelsOnIssue({
+          const { data: labels } = await github.rest.issues.listLabelsOnIssue({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: context.issue.number
           });
           
-          const isForReview = labels.data.some(label => label.name === 'PR - for review');
-          const isReviewed = labels.data.some(label => label.name === 'PR - reviewed - ready');
+          const isForReview = labels.some(label => label.name === 'PR - for review');
+          const isReviewed = labels.some(label => label.name === 'PR - reviewed - ready');
           const hasRequiredLabel = isForReview || isReviewed;
 
           const { data: reviews } = await github.rest.pulls.listReviews({
@@ -57,7 +57,7 @@ jobs:
           if (!isReady) {
             let message = '';
             if (!hasRequiredLabel) {
-              message = 'This PR is not ready for checks. Please add either the "PR - for review" or "PR - reviewed - ready" label when it/'s ready to run checks.';
+              message = "This PR is not ready for checks. Please add either the \"PR - for review\" or \"PR - reviewed - ready\" label when it's ready to run checks.";
             } else if (hasChangesRequested) {
               message = `Changes have been requested on this PR in the latest review. Please address the requested changes before running checks again. (Latest review ID: ${latestReview.id})`;
             }
