--- a/Happy Face/package.json
+++ b/Happy Face/package.json
@@ -56,9 +56,11 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.4.9",
     "postcss": "^8.4.44",
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
